# WindyApp_TestTask

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  schemas.py
app/config/: __init__.py  default.py
app/endpoints/: __init__.py  get_forecast.py  health_check.py
app/service/: get_data.py  position.py  utils.py
